# clap-validator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yml  check.yml
src/: cli.rs  commands.rs  fuzz.rs  host.rs  hosting.rs  index.rs  main.rs  plugin.rs  tests.rs  util.rs  validator.rs
src/cli/: config.rs  log.rs  panic.rs  print.rs  sandbox.rs  tracing.rs
src/cli/tracing/: record.rs  writer.rs
src/commands/: fuzz.rs  list.rs  validate.rs
src/fuzz/: rng.rs  runner.rs
src/plugin/: audio_thread.rs  ext.rs  host.rs  index.rs  instance.rs  library.rs  preset_discovery.rs  process.rs  util.rs
src/plugin/audio_thread/: process.rs
src/plugin/ext/: ambisonic.rs  audio_ports.rs  audio_ports_activation.rs  audio_ports_config.rs  configurable_audio_ports.rs  latency.rs  note_ports.rs  params.rs  preset_load.rs  render.rs  state.rs  surround.rs  tail.rs  thread_pool.rs  voice_info.rs
src/plugin/instance/: audio_thread.rs  main_thread.rs  process.rs  shared.rs
src/plugin/instance/audio_thread/: process.rs
src/plugin/preset_discovery/: indexer.rs  metadata_receiver.rs  provider.rs
src/plugin/process/: buffer.rs  events.rs  transport.rs
src/tests/: plugin.rs  plugin_instance.rs  plugin_library.rs  rng.rs
src/tests/plugin/: descriptor.rs  extensions.rs  features.rs  params.rs  processing  processing.rs  state.rs
src/tests/plugin_instance/: descriptor.rs  layout.rs  params.rs  processing.rs  state.rs  transport.rs
src/tests/plugin_library/: factories.rs  preset_discovery.rs  scanning.rs
src/validator/: tests.rs
tests/: validate.rs
tests/clack-effect/: Cargo.toml
tests/clack-effect/src/: lib.rs  params.rs
tests/clack-synth/: Cargo.toml
tests/clack-synth/src/: lib.rs  oscillator.rs  params.rs  poly_oscillator.rs
