[package]
name = "clapval"
version = "0.1.0"
edition = "2021"
license = "MIT"

description = "A validator and automatic test suite for CLAP plugins"
readme = "README.md"
repository = "https://github.com/robbert-vdh/clapval"

[dependencies]
anyhow = "1.0.58"
# All the claps!
clap = { version = "3.2.6", features = ["derive"] }
# TODO: Switch back to the crates.rs version once the debug prints are in a released version
clap-sys = { git = "https://github.com/glowcoil/clap-sys.git", rev = "a283eb9fb8febe5a3706d396e0b8c12f021625af" }
colored = "2.0.0"
crossbeam = "0.8.1"
libloading = "0.7.3"
log = "0.4"
log-panics = "2.0"
midi-consts = "0.1.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tempfile = "3.3"
textwrap = { version = "0.15.0", features = ["terminal_size"] }
walkdir = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
