[package]
name = "clap-validator"
version = "0.3.1"
edition = "2021"
license = "MIT"
rust-version = "1.64.0"  # MSRV

description = "A validator and automatic test suite for CLAP plugins"
readme = "README.md"
repository = "https://github.com/free-audio/clap-validator"

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.23", features = ["serde"] }
# All the claps!
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
# For CLAP 1.1.8 support
clap-sys = { git = "https://github.com/robbert-vdh/clap-sys.git", rev = "04779b57663f6f3f710cb813bde0e499a6515d17" }
colored = "2.0.0"
crossbeam = "0.8.1"
libloading = "0.7.3"
log = "0.4"
log-panics = "2.0"
midi-consts = "0.1.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.6.1"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.12.0"
simplelog = "0.12"
strum = "0.24.1"
strum_macros = "0.24.1"
tempfile = "3.3"
textwrap = { version = "0.15.0", features = ["terminal_size"] }
walkdir = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
