[workspace]
members = [
    ".",
    "tests/clack-synth",
    "tests/clack-effect",
]

[package]
name = "clap-validator"
version = "0.4.0"
edition = "2024"
license = "MIT"
rust-version = "1.93.0"  # MSRV
description = "A validator and automatic test suite for CLAP plugins"
readme = "README.md"
repository = "https://github.com/free-audio/clap-validator"
authors = [
    "Robbert van der Helm <mail@robbertvanderhelm.nl>",
    "Quant1um <blep@amee.ee>"
]

[dependencies]
anyhow = "1.0.58"
basic-toml = "0.1.10"
either = "1.9.0"
clap = { version = "4.5.58", features = ["derive", "wrap_help"] }
clap-sys = "0.5.0"
crossbeam-utils = "0.8.21"
libloading = "0.9.0"
log = "0.4"
rand = { version = "0.10.0", default-features = false, features = ["std"] }
regex-lite = "0.1.8"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.28.0"
strum_macros = "0.28.0"
tempfile = "3.3"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
time = { version = "0.3", features = ["serde"] }
walkdir = "2.3"
wait-timeout = "0.2.1"
yansi = "1.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
